--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       <title>React App</title>
    </head>
    <body>
-      <div id = "app"></div>
-      <script src = '../client/index.js'></script>
+      <div id = "app">this isn't working</div>
+      <script type="text/javascript" src="bundle.js"></script>
    </body>
 </html>
